# sherlockcode

./: .sherlockconfig.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: review.yml
src/sherlockcode/: __init__.py  __main__.py
src/sherlockcode/cli/: __init__.py  app.py  config.py  fix.py  learn.py  review.py
src/sherlockcode/config/: __init__.py  loader.py  schema.py
src/sherlockcode/core/: __init__.py  context.py  fixer.py  git.py  learner.py  reviewer.py
src/sherlockcode/outputs/: __init__.py  markdown.py  terminal.py
src/sherlockcode/prompts/: fix_autofix.md  learn_pattern_extraction.md  review_architect.md  review_default.md  review_performance.md  review_readability.md  review_security.md
src/sherlockcode/providers/: __init__.py  base.py  claude.py  openai.py
tests/: conftest.py
tests/test_cli/: test_app.py  test_config.py  test_fix.py  test_learn.py  test_review.py
tests/test_config/: test_loader.py  test_schema.py
tests/test_core/: test_context.py  test_fixer.py  test_git.py  test_learner.py  test_reviewer.py
tests/test_outputs/: test_markdown.py  test_terminal.py
tests/test_providers/: test_base.py  test_claude.py  test_openai.py
